syntax="proto3";

option java_package = "io.grpc.util";
option java_multiple_files = true;

package util.status;

/** RPCの結果を表す */
message StatusMsg {
    Status status = 1;
    string detail = 2;
}

enum Status {
    DEFAULT = 0;
    OK = 1;
    ERROR = 2;
    NOT_COMPLETED = 3;
}